--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,7 +11,7 @@ amazon:
   service: S3
   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: ENV["S3_BUCKET"]
+  region: us-east-1
   bucket: <%= Rails.application.credentials.dig(:aws, :bucket) %>
 
 # Remember not to checkin your GCS keyfile to a repository
